[metadata]
name = python-standardize-it
version = 1.0.2
description = Tool for standardizing strings against a known set of standards
long_description = file: README.rst
keywords = NLP, strings, standardizing, standardization, normalization, cosine, similarity
license = GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Text Processing :: General
    Topic :: Utilities

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src